--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,14 @@ ol {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
@@ -79,9 +85,14 @@ ol {
 }
 
 .flex-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
   margin-bottom: -30px;
+}
+@media screen and (min-width: 768px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .backdrop {
@@ -429,8 +440,9 @@ ol {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 100vh;
   overflow-y: auto;
+  background-color: #ffffff;
 }
 
 .mob__list {
@@ -1025,17 +1037,25 @@ ol {
 
 .list-portfolio {
   display: block;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 30px;
-  margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.list-portfolio:nth-child(3n) {
-  margin-right: 0;
+  justify-content: space-between;
+  width: 100%;
 }
 .list-portfolio:hover, .list-portfolio:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+@media screen and (min-width: 768px) {
+  .list-portfolio {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .list-portfolio {
+    width: calc((100% - 90px) / 3);
+  }
 }
 
 .list-portfolio:hover .content-top-text {
@@ -1069,17 +1089,17 @@ ol {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-link {
+.portfolio__button-item {
   display: block;
   margin-right: 8px;
   align-items: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-link:nth-child(5n) {
+.portfolio__button-item:nth-child(5n) {
   margin-right: 0;
 }
-.hero-link:hover, .hero-link:focus {
+.portfolio__button-item:hover, .portfolio__button-item:focus {
   color: var(--accent-color);
 }
 
@@ -1432,6 +1452,7 @@ ol {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: left;
 }
 
 .skils__text {
