--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,6 +5,11 @@
   background-color: var(--primary-white-color);
 }
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
