--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -23,7 +23,11 @@
 }
 
 .flex-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: block;
   margin-bottom: -30px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
