--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -39,8 +39,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
+    background-color: #ffffff;
   }
 }
 .mob__list {
