--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,172 +1,3 @@
-// .portfolio__button {
-//   display: flex;
-//   flex-wrap: wrap;
-//   padding-bottom: 56px;
-
-//   @media screen and (min-width: 1200px) {
-//     display: flex;
-//     flex-wrap: wrap;
-//     justify-content: center;
-//   }
-// }
-// .list-portfolio {
-//   display: block;
-//   justify-content: space-between;
-//   margin-bottom: 30px;
-//   margin-right: 30px;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   &:nth-child(3n) {
-//     margin-right: 0;
-//   }
-//   &:hover,
-//   &:focus {
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//       1px 4px 6px rgba(0, 0, 0, 0.16);
-//   }
-// }
-
-// .list-portfolio:hover .content-top-text {
-//   transform: translateY(0%);
-// }
-// .shadow:hover,
-// .shadow:focus {
-//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-// }
-
-//   @media screen and (min-width: 768px) {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-right: 30px;
-//     &:nth-child(2n) {
-//       margin-right: 0;
-//     }
-
-//     @media screen and (min-width: 1200px) {
-//       display: flex;
-//       flex-wrap: wrap;
-//       margin-right: 30px;
-//       &:nth-child(3n) {
-//         margin-right: 0;
-//       }
-//     }
-//   }
-
-//   &:hover,
-//   &:focus {
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//       1px 4px 6px rgba(0, 0, 0, 0.16);
-//   }
-// }
-// .list-portfolio:not(:last-child) {
-//   @media screen and (min-width: 768px) {
-//     margin-right: 30px;
-//   }
-//   @media screen and (min-width: 1200px) {
-//     margin-right: 30px;
-//   }
-// }
-
-// .list-portfolio:hover .content-top-text {
-//   transform: translateY(0%);
-// }
-// .shadow:hover,
-// .shadow:focus {
-//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-// }
-
-// .content-top-wrap {
-//   position: relative;
-//   overflow: hidden;
-// }
-
-// .content-top-text {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   font-weight: 400;
-//   font-size: 18px;
-//   line-height: 1.56;
-//   letter-spacing: 0.03em;
-//   background-color: rgba(33, 150, 243, 0.9);
-//   color: var(--primary-white-color);
-//   padding: 63px 24px;
-//   height: 100%;
-//   transform: translateY(101%);
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-// }
-
-// .portfolio__button-item {
-//   display: flex;
-//   flex-wrap: wrap;
-//   margin-right: 8px;
-//   padding-bottom: 20px;
-//   align-items: center;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   &:nth-child(5n) {
-//     margin-right: 0;
-//   }
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-
-// .post-title {
-//   font-weight: 700;
-//   font-size: 18px;
-//   line-height: 2;
-//   letter-spacing: 0.06em;
-//   color: var(--primary-text-color);
-// }
-// .post-text {
-//   font-size: 16px;
-//   line-height: 2;
-//   color: #757575;
-//   &:hover,
-//   &:focus {
-//     color: var(--accent-color);
-//   }
-// }
-
-// .hero-item {
-//   cursor: pointer;
-// }
-// .portfolio__title {
-//   position: absolute;
-//   width: 1px;
-//   height: 1px;
-//   margin: -1px;
-//   border: 0;
-//   padding: 0;
-//   white-space: nowrap;
-//   clip-path: inset(100%);
-//   clip: rect(0 0 0 0);
-//   overflow: hidden;
-// }
-// .content-link {
-//   display: flex;
-//   // margin-right: 30px;
-// }
-// .portfolio-container {
-//   text-align: center;
-//   margin-bottom: 30px;
-
-//   @media screen and (min-width: 768px) {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-bottom: -30px;
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-bottom: -30px;
-//   }
-// }
-
 .portfolio__button {
   display: flex;
   justify-content: center;
@@ -174,19 +5,50 @@
 }
 .list-portfolio {
   display: block;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 30px;
-  margin-right: 30px;
+  // margin-right: 30px;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
+
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  justify-content: space-between;
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 3);
+  }
+
+  // @media screen and (min-width: 768px) {
+  //   display: block;
+  //   justify-content: space-between;
+  //   margin-bottom: 30px;
+  //   gap: 30px;
+  //   transition-duration: 250ms;
+  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  //   &:nth-child(3n) {
+  //     margin-right: 0;
+  //   }
+
+  //   }
+
+  // @media screen and (min-width: 1200px) {
+  //   display: block;
+  //   justify-content: space-between;
+  //   margin-bottom: 30px;
+  //   margin-right: 30px;
+  //   transition-duration: 250ms;
+  //   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  //   &:nth-child(3n) {
+  //     margin-right: 0;
+  //   }
+  // }
 }
 
 .list-portfolio:hover .content-top-text {
@@ -219,7 +81,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-link {
+.portfolio__button-item {
   display: block;
   margin-right: 8px;
   align-items: center;
