--- a/sass/layout/_skils.scss
+++ b/sass/layout/_skils.scss
@@ -57,6 +57,7 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: left;
 }
 .skils__text {
   font-size: 14px;
