--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -51,12 +51,12 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 354px;
+    // width: 354px;
     margin-bottom: 0;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 270px;
+    // width: 270px;
     margin-bottom: 0;
   }
 }
