--- a/css/main.css
+++ b/css/main.css
@@ -669,25 +669,9 @@ ol {
 }
 
 .img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   height: auto;
-}
-@media screen and (min-width: 768px) {
-  .img {
-    margin-right: 15px;
-  }
-  .img:last-child {
-    margin-right: 0;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .img {
-    margin-right: 15px;
-  }
-  .img:last-child {
-    margin-right: 0;
-  }
 }
 
 .team__item {
@@ -696,18 +680,17 @@ ol {
   border: 1px solid #ececec;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-bottom: 30px;
-}
-.team__item:last-child {
-  margin-bottom: 0;
+  gap: 30px;
 }
 @media screen and (min-width: 768px) {
   .team__item {
+    width: calc((100% - 30px) / 2);
     margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
   .team__item {
+    width: 270px;
     margin-bottom: 0;
   }
 }
