--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -18,23 +18,23 @@
 }
 
 .img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   height: auto;
 
-  @media screen and (min-width: 768px) {
-    margin-right: 15px;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+  // @media screen and (min-width: 768px) {
+  //   margin-right: 15px;
+  //   &:last-child {
+  //     margin-right: 0;
+  //   }
+  // }
 
-  @media screen and (min-width: 1200px) {
-    margin-right: 15px;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+  // @media screen and (min-width: 1200px) {
+  //   margin-right: 15px;
+  //   &:last-child {
+  //     margin-right: 0;
+  //   }
+  // }
 }
 
 .team__item {
@@ -45,18 +45,15 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  margin-bottom: 30px;
-  &:last-child {
-    margin-bottom: 0;
-  }
+  gap: 30px;
 
   @media screen and (min-width: 768px) {
-    // width: 354px;
+    width: calc((100% - 30px) / 2);
     margin-bottom: 0;
   }
 
   @media screen and (min-width: 1200px) {
-    // width: 270px;
+    width: 270px;
     margin-bottom: 0;
   }
 }
